After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595450 - crash with sourcemarks without tooltip_func
crash with sourcemarks without tooltip_func
Status: RESOLVED FIXED
Product: gtksourceview
Classification: Platform
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GTK Sourceview maintainers
GTK Sourceview maintainers
Depends on:
Blocks:
 
 
Reported: 2009-09-17 12:56 UTC by Carl-Anton Ingmarsson
Modified: 2009-09-21 20:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
check for NULL cat->tooltip_func (803 bytes, patch)
2009-09-17 12:56 UTC, Carl-Anton Ingmarsson
none Details | Review
don't add empty boxes to the SourceMark tooltip (1.79 KB, patch)
2009-09-17 12:56 UTC, Carl-Anton Ingmarsson
none Details | Review
don't show empty tooltip on SourceMark (1.81 KB, patch)
2009-09-17 12:56 UTC, Carl-Anton Ingmarsson
none Details | Review

Description Carl-Anton Ingmarsson 2009-09-17 12:56:39 UTC
I've attached a patch that fixes the problem. I've alsa attached a patch that keeps
the sourcemark from showing an empty tooltip.
Comment 1 Carl-Anton Ingmarsson 2009-09-17 12:56:42 UTC
Created attachment 143338 [details] [review]
check for NULL cat->tooltip_func
Comment 2 Carl-Anton Ingmarsson 2009-09-17 12:56:45 UTC
Created attachment 143339 [details] [review]
don't add empty boxes to the SourceMark tooltip
Comment 3 Carl-Anton Ingmarsson 2009-09-17 12:56:48 UTC
Created attachment 143340 [details] [review]
don't show empty tooltip on SourceMark
Comment 4 Paolo Borelli 2009-09-19 07:47:42 UTC
Thanks a lot! Good catch and set of fixes.

Since we are currently code frozen I have asked the release team permission to apply these patches: http://mail.gnome.org/archives/release-team/2009-September/msg00076.html
Comment 5 Paolo Borelli 2009-09-21 20:56:53 UTC
the crash fix was committed for 2.8.0 and the rest will be in 2.8.1.

Thanks for the patch!