check for NULL cat->tooltip_func

https://bugzilla.gnome.org/show_bug.cgi?id=595450